fixed white spaces

--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,468 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+  max-width: 100%;
+  padding-right: 0px;
+}
+html,
+body {
+  max-height: 100%;
+  max-width: 100%;
+  height: 100%;
+}
+body {
+  background-color: white;
+  height: 1200px;
+  border: 13px transparent;
+  padding-bottom: 20px;
+}
+header {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  right: 20%;
+  top: 5%;
+}
+header nav {
+  width: 100%;
+  padding: 20px;
+}
+@media (max-width: 500px) {
+  header nav {
+    width: 100%;
+    font-size: 10px;
+    position: relative;
+    right: 70px;
+    bottom: 20px;
+  }
+}
+header nav a {
+  font-family: 'Cabin', sans-serif;
+  color: dodgerblue;
+  text-decoration: none;
+  position: relative;
+  left: 48%;
+  font-size: 25px;
+  padding: 3%;
+}
+@media (max-width: 500px) {
+  header nav a {
+    width: 100%;
+    font-size: 10px;
+    font-weight: bold;
+  }
+}
+.introh2 {
+  background-color: lightgrey;
+  color: dodgerblue;
+  width: 700px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 30%;
+  top: 50px;
+  padding-bottom: 10px;
+}
+@media (max-width: 500px) {
+  .introh2 {
+    display: none;
+  }
+}
+.introp {
+  background-color: lightgrey;
+  width: 700px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 30%;
+  top: 50px;
+  padding-bottom: 10px;
+  font-size: 30px;
+  color: dodgerblue;
+  background-color: whitesmoke;
+  border: 5px dodgerblue solid;
+  padding: 20px;
+}
+@media (max-width: 500px) {
+  .introp {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .introp {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .skill {
+    display: none;
+  }
+}
+.skill .myskills {
+  background-color: lightgrey;
+  color: dodgerblue;
+  width: 700px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 30%;
+  top: 60px;
+  padding-bottom: 10px;
+}
+.skill .myskillsp {
+  background-color: lightgrey;
+  width: 700px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 30%;
+  top: 50px;
+  padding-bottom: 10px;
+  display: ;
+  font-size: 30px;
+  color: dodgerblue;
+  background-color: whitesmoke;
+  border: 5px dodgerblue solid;
+  padding: 20px;
+}
+@media (max-width: 500px) {
+  .skill .myskillsp {
+    display: none;
+  }
+}
+.work .mywork {
+  background-color: lightgrey;
+  color: dodgerblue;
+  width: 700px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 30%;
+  top: 60px;
+  padding-bottom: 10px;
+}
+@media (max-width: 500px) {
+  .work .mywork {
+    display: none;
+  }
+}
+.work .myworkp {
+  background-color: lightgrey;
+  width: 700px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 30%;
+  top: 50px;
+  padding-bottom: 10px;
+  display: flex ;
+  font-size: 30px;
+  color: dodgerblue;
+  background-color: whitesmoke;
+  border: 5px solid dodgerblue;
+  padding: 20px;
+}
+@media (max-width: 500px) {
+  .work .myworkp {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .work .myworkp {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .Conactss {
+    display: none;
+  }
+}
+.Conactss .mycon {
+  background-color: lightgrey;
+  color: dodgerblue;
+  width: 700px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 30%;
+  top: 60px;
+  padding-bottom: 10px;
+}
+.Conactss .conp {
+  background-color: lightgrey;
+  width: 700px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 30%;
+  top: 50px;
+  padding-bottom: 10px;
+  display: ;
+  font-size: 30px;
+  color: dodgerblue;
+  background-color: whitesmoke;
+  border: 5px dodgerblue solid;
+  padding: 20px;
+}
+@media (max-width: 500px) {
+  .Conactss .conp {
+    display: none;
+  }
+}
+.Conactss .Conactss {
+  padding-bottom: 20px;
+}
+.mobilep1 {
+  display: none;
+}
+@media (max-width: 500px) {
+  .mobilep1 {
+    color: dodgerblue;
+    display: flex;
+    font-size: 30px;
+    width: 80%;
+    position: relative;
+    left: 30px;
+    padding-bottom: 70px;
+    top: 30px;
+  }
+}
+.mobileh2 {
+  display: none;
+}
+@media (max-width: 500px) {
+  .mobileh2 {
+    display: flex;
+    color: black;
+    font-size: 40px;
+    position: relative;
+    left: 20px;
+    background-color: dodgerblue;
+    width: 200px;
+    top: 30px;
+  }
+}
+.skills {
+  display: none;
+}
+@media (max-width: 500px) {
+  .skills {
+    color: dodgerblue;
+    display: flex;
+    font-size: 30px;
+    width: 80%;
+    position: relative;
+    left: 30px;
+    padding-bottom: 70px;
+  }
+}
+.skillsh2 {
+  display: none;
+}
+@media (max-width: 500px) {
+  .skillsh2 {
+    display: flex;
+    color: black;
+    font-size: 40px;
+    position: relative;
+    left: 20px;
+    background-color: dodgerblue;
+    width: 200px;
+  }
+}
+.works {
+  display: none;
+}
+@media (max-width: 500px) {
+  .works {
+    color: dodgerblue;
+    display: flex;
+    font-size: 30px;
+    width: 80%;
+    position: relative;
+    left: 30px;
+    padding-bottom: 70px;
+  }
+}
+.workh2 {
+  display: none;
+}
+@media (max-width: 500px) {
+  .workh2 {
+    display: flex;
+    color: black;
+    font-size: 40px;
+    position: relative;
+    left: 20px;
+    background-color: dodgerblue;
+    width: 200px;
+  }
+}
+.contact {
+  display: none;
+}
+@media (max-width: 500px) {
+  .contact {
+    color: dodgerblue;
+    display: flex;
+    font-size: 30px;
+    width: 80%;
+    position: relative;
+    left: 30px;
+    margin-bottom: 20px;
+  }
+}
+.contacth2 {
+  display: none;
+}
+@media (max-width: 500px) {
+  .contacth2 {
+    display: flex;
+    color: black;
+    font-size: 40px;
+    position: relative;
+    left: 20px;
+    background-color: dodgerblue;
+    width: 200px;
+  }
+}
+footer p {
+  position: relative;
+  bottom: 300px;
+}
